--- a/main.css
+++ b/main.css
@@ -63,6 +63,9 @@ body {
 .mt-25 {
   margin-top: 2.5rem;
 }
+.mt-20 {
+  margin-top: 2rem;
+}
 .mt-10 {
   margin-top: 1rem;
 }
@@ -204,7 +207,6 @@ body {
 }
 
 .h-7 {
-  font-family: Roboto;
   font-size: 3.2rem;
   font-weight: 700;
   line-height: 4.16rem;
@@ -247,14 +249,13 @@ body {
   font-size: 1.6rem;
   font-weight: 400;
   line-height: 2.4rem;
-  font-family: Roboto;
   color: var(--color-black);
 }
 
 .p-3 {
   font-family: Roboto;
   font-size: 1.6rem;
-  font-weight: 400;
+  font-weight: 300;
   line-height: 2.4rem;
 }
 
