🌾 fix: form change

--- a/main.css
+++ b/main.css
@@ -43,6 +43,9 @@ body {
 .max-width-557 {
   max-width: 55.7rem;
 }
+.max-width-500 {
+  max-width: 50rem;
+}
 
 /* Margins */
 /* -- margin tops */
