--- a/main.css
+++ b/main.css
@@ -506,6 +506,11 @@ body {
   max-width: 40rem;
 }
 
+.form-container__right {
+  position: sticky;
+  top: 2rem;
+}
+
 .form-container__header {
   padding-bottom: 2.5rem;
   border-bottom: 1px solid #cccccc;
@@ -715,4 +720,3 @@ body {
   visibility: visible;
   animation: fadeInSwipeDown 0.6s ease forwards 0.2s; /* Delay modal to start after overlay */
 }
-
