--- a/main.css
+++ b/main.css
@@ -317,6 +317,28 @@ body {
   color: var(--color-white);
 }
 
+.h-20 {
+  font-size: 1.2rem;
+  font-weight: 600;
+  color: var(--color-white);
+}
+
+.h-21 {
+  font-family: Dosis;
+  font-size: 1.5rem;
+  font-weight: 700;
+  line-height: 2.4rem;
+  color: var(--color-black);
+}
+
+.h-22 {
+  font-family: Dosis;
+  font-size: 1.5rem;
+  font-weight: 700;
+  line-height: 2.4rem;
+  color: var(--color-black);
+}
+
 /* -- paragraphs */
 .p-1 {
   font-size: 1.8rem;
@@ -548,6 +570,21 @@ body {
   text-decoration: none;
 }
 
+.hero-icon-2 {
+  border-radius: 0.8rem;
+  background-color: #000000;
+
+  cursor: pointer;
+
+  display: flex;
+  align-items: center;
+  gap: 0.8rem;
+  padding: 0.8rem 1.2rem;
+
+  text-decoration: none;
+  width: max-content;
+}
+
 .bagde {
   font-weight: 700;
   font-size: clamp(1.3rem, 3vw, 1.8rem);
@@ -595,6 +632,49 @@ body {
   .hero-image-container {
     max-width: 41.6rem;
     max-height: 30rem;
+  }
+}
+
+.hero-get-started {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 1%;
+}
+
+.hero-get-started__android {
+  flex-basis: 49.5%;
+  flex-shrink: 0;
+  border: 1px solid #cbcbcb52;
+  padding: 1rem;
+  border-radius: 0.8rem;
+}
+
+.hero-get-started__ios {
+  flex-basis: 49.5%;
+  flex-shrink: 0;
+  border: 1px solid #cbcbcb52;
+  padding: 1rem;
+  border-radius: 0.8rem;
+}
+
+@media (width <= 700px) {
+  .hero-get-started {
+    flex-direction: column;
+    gap: 2rem;
+  }
+
+  .hero-get-started__android {
+    flex-basis: 100%;
+  }
+
+  .hero-get-started__ios {
+    flex-basis: 100%;
+  }
+}
+
+.platform-list {
+  li {
+    margin-bottom: 1rem;
   }
 }
 
